Incorporate Week 4 journal

--- a/index.html
+++ b/index.html
@@ -2662,6 +2662,262 @@ h5 {
             guilt paid him no mind as he compensated the eternity of misery
             he’s cursed this man to ...
             </p>
+
+            <h3 class="break">Week 3</h3>
+            <strong><em>as observed by The Broken Man (Ben Pancoast)</em></strong>
+            <p>
+            TBD
+            </p>
+
+            <h3 class="break">Week 4 - In The Dungeons of Garg</h3>
+            <strong><em>as observed by Aldoon (Steve Graham)</em></strong>
+            <p>
+            Aldoon was standing in the ancient hall, his shield aglow from his
+            light spell, his warhammer gripped tightly in his fist, listening
+            to the sounds of more skeletons, and other things, approaching. For
+            the first time in a very long while he knew what he was supposed to
+            do.
+            </p>
+            <p>
+            As he descended into this place, he was welcomed by the familiar
+            musty, dank aroma of an ancient ruin. As the first skeletons
+            appeared, he noted the bright, acrid stench of long-rotted flesh
+            and bones. And he felt at home. Or at least more at home than he
+            had felt in what seemed like thousands of years.
+            </p>
+            <p>
+            The mountains surrounding Aldoon’s home city of Erridon held many
+            secrets, and sometimes those secrets roused. As the patrols charged
+            with protecting the mountain passes, Aldoon’s order were also sent
+            to investigate disturbances in the ancient temples and caverns.
+            Aldoon knew these foes, and his training returned to him swiftly,
+            the incantations for turning back these creatures already on his
+            lips. His trunk curled around the wooden symbol of The Sister,
+            Iolensis - the one he had carved with his fingers in hell’s
+            darkness. He felt the faint crackle and hum of her presence.
+            </p>
+            <p>
+            The group was already investigating the passages leading out of the
+            hall. Aldoon waited for a moment to decide where he might be
+            needed. It did not take long.
+            </p>
+            <p>
+            “Here.” said Crokiak, the green-skinned one - the one who loves
+            diagrams and fixing things. He hurled some sort of magic stone at
+            something down the hall straight ahead, and Aldoon heard the sounds
+            of bones shattering and hitting the stone floor. Next to him, the
+            mind flayer, suddenly transformed into some sort of spidery
+            creature and disappeared into the darkness above.
+            </p>
+            <p>
+            Aldoon would have strode forward to help, but to his right he heard
+            more commotion. In the darkness, he heard arrows flying, and a
+            sound not quite like an arrow piercing plate armor - at once
+            metallic and meaty. The broken man let out a sound like a man
+            getting punched in the stomach, but somehow both raspy and echoey.
+            Aldoon began running.
+            </p>
+            <p>
+            In Lododon society, there are many institutions that govern life:
+            Family of course, Clan as well.  The ruling Council, one’s
+            religious order, and for Aldoon, his patrol, or his ‘March’. The
+            March
+            brought together Loxoda from all strata of society, and while he
+            did not agree with all of their ideas, was not familiar with the
+            customs of their Clans, he watched out for them like family. The
+            proverb “Clan is Strength, Clan is Safety, Clan is Life” extends to
+            all Loxodon institutions, and Aldoon found perhaps his strongest
+            bond with his March.
+            </p>
+            <p>
+            Well, for better or worse, and as confusing as all of it was,
+            Aldoon had a new March. He ran to the member in trouble, through
+            the archway, into the side passage.
+            </p>
+            <p>
+            Highlighted by the rabbit-man’s lantern, Aldoon saw the Broken Man
+            pull the arrow the rest of the way through himself (it didn’t take
+            much) and look down at it wonderingly. A pool of black liquid that
+            might have been his blood gathered at his feet.
+            </p>
+            <p>
+            Aldoon skid to a stop next to him, placed his hand on the wound,
+            and curled his trunk even tighter around his holy symbol. He
+            recited in a rush “By the grace of The Allmother and the Three
+            Sisters, restore this man and cure his wounds!”
+            </p>
+            <p>
+            Aldoon had time to wonder “Can the Gods even hear my prayers on
+            this strange, dry plane?” but then he felt divine warmth flood
+            through him, and saw a slight crackle of energy as the Broken Man’s
+            wound closed.
+            </p>
+            <p>
+            Shapes approached from the darkness, the rattle of bones and
+            shuffle of rotting flesh echoing through the chamber. Aldoon
+            thought he heard the Rabbit man fire an arrow from the shadows, and
+            then the creatures were upon them. Aldoon stood and tried to bring
+            his shield to bear, lighting the abominations with its glow.
+            </p>
+            <p>
+            From the main chamber, Aldoon heard a roar from the Sundered Angel,
+            the crash and xylophone crumble of a shattered skeleton. More were
+            coming from that direction. He stepped forward, as the Broken Man
+            dodged behind him back to the archway. He swung hard with his
+            warhammer, and heard the crunch of the zombie’s shoulder, but the
+            thing turned and still scratched and clawed. The rabbit man fended
+            off a skeleton with his rapier, keeping it at bay and prying ribs
+            free. He thought better of the encounter, and in a flash, leaped
+            clear over Aldoon’s head to the cover of the Archway shadows.
+            </p>
+            <p>
+            From the main chamber, Aldoon heard Furiel cry “To the passageway!
+            We mustn’t get divided!” He heard her coming to their aid.
+            </p>
+            <div class="illustration"><img class="illustration" src="img/zombies_mask2.png"></div>
+            <p>
+            The Zombie lurched against Aldoon’s shield, but he managed to push
+            it back and gain some space to maneuver. “Eorthrakk!” shouted the
+            Broken Man from behind him and a crackling green and violet stream
+            of energy blasted past Aldoon, carving away half the dead man’s
+            face and most of his left shoulder. The zombie tumbled to the stone
+            floor.
+            </p>
+            <p>
+            The Sundered Angel was there then, her sword suddenly alight in
+            flames. With a scream that might have been anger or delight, she
+            swept the weapon down in a diagonal arc that shattered another
+            skeleton and scattered its now-burning bones.
+            </p>
+            <p>
+            From the main chamber there came a tremendous ear-splitting boom,
+            and the gutteral sound of dying zombies, the skitter of shattered
+            skeleton. Aldoon turned back to put his shield between the coming
+            attackers and those in the passageway. He saw the Sundered Angel
+            head further down the hall, but felt she likely could handle her
+            own affairs.
+            </p>
+            <p>
+            As he entered the main chamber again, he saw a dead man approaching
+            the Quiet Drow, who was either dazed or unconcerned. Aldoon gripped
+            his talisman, pointed with his warhammer and called out “May
+            Iolensis cleanse you in her sacred fire.” And it was then that he
+            felt the connection with his holy patroness falter.
+            </p>
+            <p>
+            A thin light manifested and pierced down upon the zombie, and yes,
+            it seemed the creature was injured, but it was not slowed at all.
+            The energy and warmth Aldoon had felt when restoring the Broken Man
+            - that was gone now. He felt only a tenuous connection. It was as
+            if for some reason The Sister did not want him to harm the
+            creature.
+            </p>
+            <p>
+            The Broken Man’s God had no such qualms, apparently, for the next
+            moment another green and violet streak took the top of the
+            creature’s skull. It crumpled slowly to the floor.
+            </p>
+            <p>
+            A raspy voice suddenly echoed through the chamber: “Stop. the.
+            Killing.” </p>
+            <p>
+            A ruse? A distraction from someone controlling these things? Aldoon
+            stood his ground as a dead man and a skeleton bore down on him, but
+            then... slowed? He gripped his warhammer tightly, looked over his
+            shield into the glassy, unfocused eyes of the zombie.
+            </p>
+            <p>
+            “Stop. the. Killing.” again the voice filled the chamber.
+            </p>
+            <p>
+            And Aldoon noticed the creatures all slowed to a stop - absently
+            lowered their claws and weapons. He was dumbstruck.
+            </p>
+            <p>
+            The next couple of minutes were a blur as a thousand thoughts raced
+            through his mind. He had thought he finally knew at least a piece
+            of what his purpose might be. He thought he finally had some idea
+            of what his Goddess wanted of him - of why she would have let these
+            things befall him. His training had been thorough in the lore of
+            undead creatures and how to defeat, turn, banish them - how to send
+            them finally to their eternal rest. (At the end of a hammer if need
+            be.) It was something his order constantly prepared for, something
+            his patroness commanded as their sacred duty.
+            </p>
+            <p>
+            And yet she withheld her divine fire - refused to strike down the
+            dead man. And here were undead creatures, standing idly, staring
+            calmly at him, no apparent threat now that their leader had called
+            them to stop. To strike at them now, despite their damnation, would
+            be dishonorable.  An affront.
+            </p>
+            <p>
+            Verthandi was speaking with the leader, a dead man little different
+            than the ones that lay mangled on the stones. He stood next to a
+            skeletal minotaur, scant flesh still clinging to some of its ribs,
+            that was about the same height as Aldoon. The Mind Flayer was
+            saying “We are here for a book” as Aldoon gaped at the skull of a
+            minotaur that, now that it knew there would be no more fighting,
+            could only be described as bored. A bored Minotaur skeleton. Aldoon
+            felt lightheaded.
+            </p>
+            <p>
+            The Broken Man, black blood dripping from his hands, was presenting
+            the Book of Rules to the zombie leader, and explaining that the
+            rules stated that they must relinquish an item of treasure for each
+            of Aldoon’s party, since it was agreed to stop the killing. “Look
+            for yourself.” Aldoon was still reeling.
+            </p>
+            <div class="illustration"><img class="illustration" src="img/garg_mask.png"></div>
+            <p>
+            As the leader (Garg. The zombie had a name, and it was Garg.) led
+            them through the labyrinth of halls and passageways to the library,
+            dis- appointment and confusion reigned in Aldoon’s mind.  He had felt
+            certain he knew his role. He felt clear of purpose for one bright
+            moment as he battled an enemy he knew. But now, he followed behind
+            an abomination, walking past chambers that contained yet more
+            undead creatures, shambling about or merely standing staring at
+            nothing. And whenever he considered going forth anyway to send them
+            to their rest - to do what he had been trained to do - he
+            remembered the thin, anemic sacred light. He heard Garg’s raspy
+            voice. (“Stop. the. Killing.”) Both were a rebuke, a message.
+            “Unlearn your ways. Here, a new path must be forged.”
+            </p>
+            <p>
+            They were in the library now, a sparse collection of ancient tomes.
+            The Green-Skinned one held up a page fragment to the torchlight. It
+            was a complex diagram very much like the one they had retrieved
+            from the Waterdeep Bookseller.
+            </p>
+            <p>
+            From Garg they learned that the diagram may be part of the drawings
+            for a mechanism - a powerful mechanism that featured prominently in
+            an ancient Blood War on the plane of Acheron.  The mechanism had
+            been broken up, the pieces and plans scattered.
+            </p>
+            <p>
+            Aldoon’s mind began to focus. With a mystery to engage his
+            thoughts, his vaunted Loxodon Serenity calmed his nerves, allowed
+            him to clear his mind. It was no accident that fragments of an
+            ancient mystery appeared in both of the first tasks of their
+            nefarious captor. What did Enkosi want of this mechanism? What did
+            it do? What was this Blood War, and did the presumably immortal
+            Enkosi play a part in it?
+            </p>
+            <p>
+            The Green Skinned one and the Broken Man were already reproducing
+            the drawing and noting similarities and differences between the
+            last one. They discussed and drew and sketched and puzzled. Aldoon
+            would rest and pray on it. He began to come to terms with a new
+            reality for himself, a new path. Perhaps he was called to forge a
+            new way of serving his patroness. He would pray for her guidance.
+            He would wait to be shown what his new purpose might be.
+            </p>
+            <p>
+            And of the mystery his new companions were puzzling out, he would
+            watch, and listen. And he would find the role he must play.
+            </p>
+
         </div>
     </body>
 </html>
