--- a/index.html
+++ b/index.html
@@ -2918,6 +2918,203 @@ h5 {
             watch, and listen. And he would find the role he must play.
             </p>
 
+            <h3 class="break">Week 5 - Farewell to Pelion</h3>
+            <strong><em>as observed by Feurial (Jay Pancoast)</em></strong>
+            <p>
+            Feuriel strode with conviction back toward the surface. Behind her,
+            the voices of her companions were discussing something about...
+            books was it?
+            </p>
+            <p>
+            <em>“So we can take any of these? Even this one, important enough that our master sent us to retrieve it?”</em>
+            </p>
+            <p>
+            <em>“Yes, we have no further use for it. It has been studied and recorded. We have memorized and copied its contents.”</em>
+            </p>
+            <p>
+            <em>“What about this one, about your deity, Nepthis?”</em>
+            </p>
+            <p>
+            <em>“Yes, that one too. It contains the canon for our way of life, our very existence. But again, we know its contents thoroughly, and it would please us to see her Word spread to others. Take it...”</em>
+            </p>
+            <p>
+            It sounded like it was going quite well, but Feuriel had more important concerns. She had a purpose, at last.
+            </p>
+            <p>
+            Although there had been some talk of resting, most of her
+            companions upon seeing her determination accompanied Fueriel to the
+            surface, back to the cave-like entrance of this undead complex. As
+            she emerged into the vast dusty plains of this peculiar layer of
+            Olympus, she immediately saw her quarry: the two opportunists who
+            were waiting and hoping for an easy score.
+            </p>
+            <p>
+            Seemingly oblivious to Feuriel’s mood and intentions, one of them
+            asked, “So, do you have it? Did you bring us the vial?”
+            </p>
+            <p>
+            <em>“We do not have it, and neither shall you!”</em> Fuerial spoke,
+            with rekindled angelic power infusing her words.  </p>
+            <p>
+            <em>“Then go back in there and get it!”</em> he replied, still
+            having no ken of his fate.  Fueriel ignored him, and began to
+            recite what would become his last rites.
+            </p>
+            <p>
+            <en>“I have been sent here by Torm, God of Justice, to bring
+            justice to places where justice is not often found, to bring
+            justice to you. Go now. Leave this place, and you will be spared.
+            Take yourself and your things, and leave, and never return.”</em>
+            </p>
+            <p>
+            <em>“What?!”</em> he answered incredulously, <em>“You’re on their
+                side? They’re cursed undead! What’s wrong with you?  They
+                killed our friend, murdered him! We just came here to, um, get
+                something, and now our friend is dead because of those
+                monsters!”</em>
+            </p>
+            <p>
+            Feuriel would hear none of it, but she gave the two men another
+            chance for redemption. <em>“You came here to steal. To invade and to
+                steal. These undead are peaceful,”</em> she retorted. She
+            continued, quoting the doctrine of
+            Torm: <em>“A being is judged not by its exterior but by its deeds,
+                and words, and thoughts!”</em> </p>
+            <p>
+            She reflected on the current state of her tormented body as she
+            said this. Interesting, how those words take on new meaning for her
+            now. She continued:
+            </p>
+            <p>
+            <em>“Your friend deserved to die for his deeds, and so shall you if
+                you do not leave this place.”</em> Yet the two men refused to
+            leave, and were clearly digging in their heels and preparing for a
+            conflict, belligerent about their misguided aggression toward the
+            undead commune. <em>“What about mercy?”</em> someone asked.
+            </p>
+            <p>
+            <em>“Once a decision is made, there is no mercy,” she answered.
+                “God kills babies in their sleep.”</em>
+            </p>
+            <p>
+            It was hyperbole, for sure, but it was effective. She could feel
+            the two men shrinking away before her might, while her companions
+            gathered to her cause. Unbeknownst to Feuriel, the illithid had
+            probed the minds of the men, and whispered to the others, <em>“They
+            intend to steal the potion of immortality, sell it, and stab each
+            other in the back for it.”</em>
+            </p>
+            <p>The Fallen Angel spoke her verdict: <em>“Judgment has been passed
+            and justice will be served. You shall
+            perish.”</em>
+            <p>The field erupted in battle. The Broken Man loosed a series of
+            blasts from his arcane limbs, decimating the brains of one of the
+            men, much to the illithid’s dismay. Aldoon launched magic stones
+            into the fray. The others similarly unleashed their wrath on the
+            two men who tried with futility to resist. Feuriel, sword aglow,
+            strode confidently toward the remaining offender.
+            </p>
+            <p>
+            Since her arrival in Hell, Feuriel had been tagging along with this
+            group, a follower. But in this moment, they were following her, and
+            her leadership. It felt glorious. Her allies pulled back, allowing
+            Feuriel her moment with the last soul, as the man still dared to
+            defy her.
+            </p>
+            <p>
+            Wrath. Some angels specialized in this. Had she been one of them?
+            She brought justice upon the man. He paid the ultimate price for
+            his transgressions, and she prevented any further harm from coming
+            to the peaceful community below her feet, by his hands anyway. It
+            felt good. And it felt Good. Maybe this was why she was consigned
+            to Hell? To gain access to injustices that Torm wouldn’t otherwise
+            have? Was this her purpose? Was she Torm’s fury...?
+            </p>
+            <p>
+            In the moments after the fight was over, Fueriel approached Alhoon, seeing him take a pause for prayer.
+            <p>
+            <em>“Can you connect to your deity in this place?”</em> she asked.
+            It seemed easy for him, yet eluded her.
+            </p>
+            <p>Alhoon seemed confused by the question. <em>“Why yes,”</em> he
+            said, in the way you would expect a priest to answer such a
+            question. <em>“The Sisters are with me in all things and all
+                places.”</em> </p>
+            <p>
+            She pondered his answer. Connecting to a deity was strangely
+            unfamiliar to her. She was used to being a manifestation of Torm
+            himself, an extension of a deity, yet now she was disconnected,
+            semi-mortal. She would need to learn how to be on the other end of
+            a prayer. She closed her eyes and tried, but got no answer, or so
+            she thought.
+            </p>
+            <hr />
+            <p>
+            The party reunited, bringing the good news of “justice” back to
+            Garg, the leader of the undead. Bandito, who was strangely absent
+            from the skirmish on the surface had rejoined the party. Fueriel
+            wondered briefly how many deeds the little bandit had committed
+            which would align him closer with the two dead men up on the plains
+            than with herself.
+            </p>
+            <p>She dismissed the thought. She was too caught up
+            in her own uncertainty, her own introspection, to worry about
+            Bandito. Meanwhile, her companions were intent upon some new
+            information, an exchange of some sort with Garg. Something about
+            books again, a diagram, a map or coordinates, or something.
+            </p>
+            <p>
+            Fueriel had little interest in books and treasures, knowledge and
+            other material things. Many beings craved such things, but not her,
+            not yet. Although, she did feel cravings, remnants of the 666 lives
+            she lived as she was repeatedly ripped through the Prime as she
+            Fell. For now, she was pondering her grand purpose, while
+            the others focused on their own immediate purpose.
+            </p>
+            <hr />
+            <p>
+            She should have paid closer attention, for their immediate purpose
+            quickly became her own. The party was on a boat now, and a
+            disgusting one at that. They were sailing--rowing?--on the infamous
+            River Styx. Upon their return from Arborea with new information,
+            Enkosee wasted no time sending the group out on their next quest.
+            </p>
+            <p>
+            Apparently, the items recovered from the undead complex were
+            sufficient to identify the previously-unknown location of a
+            forgotten but significant battle in the history of the Blood War.
+            All they were expecting to find there was a crater, but perhaps the
+            crater held a clue to something important and powerful, something
+            that had been lost for a very long time.
+            </p>
+            <p>
+            <em>“Is there nothing to eat on this ship?”</em> Feuriel demanded
+            of their especially inhospitable captain, the inaccurately-named
+            Orgath the Beautiful. Perhaps he was beautiful on the inside? Nope.
+            </p>
+            <p>
+            <em>“You can drink the Styx if you like!” he jeered. “See how that
+                goes for you.”</em>
+            </p>
+            <p>She had half a mind to try it. Doubt about her divine purpose
+            had returned, while the feelings of wrath and fury hadn’t much
+            subsided. It was going to be a long and miserable voyage, but at
+            least she wasn’t one of the enslaved rowers. However, as she
+            remembered the sea of suffering, disincorporated souls and the
+            horrific fate the paladin on Day One, she reconsidered that these
+            oarsmen in Hell were perhaps the lucky ones.
+            </p>
+            <p>
+            A goodberry and some purify food a drink from her companions, who
+            clearly had much stronger connections to divine and arcane power
+            than she did, helped snap Fueriel’s mood back to a calmer place.
+            </p>
+            <p>
+            Grand purpose? She shrugged it off. For now, her purpose should be
+            to tolerate this boat ride, and to figure out what artifact or
+            ancient power they were headed toward, and what it meant for her.
+            Perhaps that is why she was put here?...
+            </p>
         </div>
     </body>
 </html>
