Integrate week 7 notes

--- a/index.html
+++ b/index.html
@@ -3115,6 +3115,194 @@ h5 {
             ancient power they were headed toward, and what it meant for her.
             Perhaps that is why she was put here?...
             </p>
+            <h3 class="break">Week 6</h3>
+            <strong><em>as observed by Crokiak (Dave Feldman)</em></strong>
+            <p>
+            TBD
+            </p>
+
+            <h3 class="break">Week 7</h3>
+            <strong><em>as observed by Verthandi (Chris Sweitzer)</em></strong>
+            <p>
+            The Reconstructed One stood in from them, wailing. She smashed a
+            jagged spike into one of the Modron that had risen up against them.
+            Krokiak’s machinations had disabled the Modron’s control over the
+            creature but unfortunately not stopped the waking of rest of the
+            Modron. Verthandi was definitely having second thoughts about
+            having mind blasted her as blood dripped down from the jagged wound
+            in his side. He was no soldier, but looking at his companions, none
+            of them appeared to be either, save for the angel, and she always
+            on the verge of collapse. He wasn’t sure how long they would be
+            able to hold out against such odds.
+            </p>
+            <p>
+            Thankfully even magical machines don’t work very well after more
+            than a thousand years of sitting on the floor of such a cavernous
+            canyon. As two of the spherical Modrons went to attack Verthandi,
+            dust and grit in its joints caused a shower of sparks to emanate
+            from them.  One missed completely while the other only made a
+            glancing blow off his shield. Maybe they had a chance after all.
+            Then several other larger Modron, boxes this time instead of
+            spheres, started to shake free a millennium of regolith and come
+            towards them as well.
+            </p>
+            <p>
+            Krokiak, Verthandi, and the two mechanical people stood at one end
+            of the remains of the ship while Feuriel, Aldoon, and Bandito faced
+            up against almost twice as many at the other, including more of the
+            box-shaped Modrons. Again though, as the Modrons attacked, their
+            joints seemed to spark and stutter. Feuriel seemed to shrug off an
+            onslaught, despite her fragility. But it wouldn’t last. The Modron
+            in front of Verthandi were already moving more freely than a few
+            seconds ago, preparing to attack again. He doubted they would
+            survive a second round.
+            </p>
+            <p>
+            As his companions chipped away at the creatures, Verthandi noticed
+            that they weren’t very tactical creatures. Natural animals, or even
+            the unnatural ones that Verthandi preferred, tended to
+            unconsciously work together, but these Modron seemed to be working
+            independently, getting in each others’ way and clumping together,
+            which meant they were vulnerable to Verthandi’s magic.
+            </p>
+            <p>
+            He quickly calculated that he could get them all with one
+            thunderwave spell. He almost started casting when he realized he
+            was going to catch everyone, including his own side, in the attack.
+            While he thought they would survive, he didn’t want to have to face
+            down any remaining enemies alone if he did kill his own party. He
+            wouldn’t be able to get them all, but it should be enough for him
+            to back away without being gutted.
+            </p>
+            <p>
+            A wave of thunder spread out in front of Verthandi. One of the
+            spherical Modron flew backwards, crashing against ground in a
+            shower of sparks. Another managed to keep itself stationary, but
+            still collapsed afterwards. The larger cube Modron stood against
+            the wave, but was clearly badly damaged by the spell. Verthandi
+            backed away, hoping Crokiak and crew would be able to finish off
+            the remaining Modron.
+            </p>
+            <p>
+            On the other front, Feuriel and Aldoon appeared to be holding their
+            own, but a few attacks had gotten through, and only luck had
+            preventing a few of the shots from bringing them down. Verthandi
+            moved to one side and threw his last thunderwave through the Modron
+            while Aldoon did same on the other side, smashing the Modron
+            against walls of the canyon.
+            </p>
+            <p>
+            <em>“That’s it for me,”</em> said Verthandi, preparing to move away
+            again, as the remaining Modron moved against Aldoon and Feuriel,
+            but he shouldn’t have worried as they quickly mopped them up. The
+            final Modron leapt upon Aldoon, only to be shattered by more
+            thunder.  At the other end Krokiak and crew had finished up as
+            well, leaving only the party and the Reconstructed One.
+            </p>
+            <p>
+            <em>“No, I no longer have to obey you,”</em> she was saying. She
+            explained that she and her friends had travelled here on a
+            Spelljammer ship, whatever that was. They had been attacked by a
+            group of Gith that had slaughter everyone, including her, but that
+            she was saved by the Modron in this canyon, only to be turned into
+            a automaton with no free will, left to protect the ostium artifact
+            that the party had been sent to find. As if remembering their duty,
+            the group began to search the area, leaving the two machines to
+            speak.
+            </p>
+            <p>
+            <em>“The Modron placed something inside my head to control me. But
+                that one,”</em> she said, pointing to Crokiak, <em>“seems to
+                have severed its link. It can still speak to me, but it can’t
+                make me do anything.”</em>
+            </p>
+            <p>
+            <em>“That is good,”</em> gravelled the other machine.
+            </p>
+            <p>
+            <em>“I was called Mel once. Thank you for saving me. I am in your
+                debt.”</em> </p>
+            <p>
+            <em>“I had a name once, but now I am Elusurm. Do you know where the
+                ostium is?”</em> </p>
+            <p>
+            Verthandi’s tentacles perked up at the name. He thought it was the
+            first time the mech had ever referred to himself by name. It
+            certainly would make it easier to keep track of everyone.
+            </p>
+            <p>
+            Mel shook her head. <em>“The Modron knows, but it won’t tell
+                me.”</em>
+            </p>
+            <p>
+            Meanwhile, the rest of the party found what appeared to be a plinth
+            with Modron engravings on it, but no ostium. Clearly the ostium had
+            been here, but where? Mel told them she had never seen the ostium,
+            and then they realized how literally calling her the ostium
+            guardian was.
+            </p>
+            <p>
+            <em>“It’s inside of her,”</em> said Verthandi. The others had come
+            to the same conclusion.  Ripping it out of her probably wouldn’t be
+            a issue, but Verthandi assumed that Feuriel and Elusurm would
+            probably object, especially if it killed her, which it probably
+            would. Besides, their job wasn’t to find the ostium, but rather
+            just explore this area to see if it was here. They did. It wasn’t.
+            They could bring back the plinth to show Enkosee what they found,
+            and if Mel was discovered, claim ignorance. She was just another
+            Modron that Krokiak had subverted to their side.
+            </p>
+            <p>
+            As they travelled back though, Verthandi wondered how well their
+            plan would work. A quick magic detection spell and Mel lit up
+            brighter than the sun, and Verthandi’s attempt to infiltrate her
+            body by transforming into a neogi hatchling to try and find the
+            ostium proved fruitless. Aldoon also noticed a Gith ship flying
+            around nearby, but thankfully it did not notice them.
+            </p>
+            <p>
+            After traveling back through the portal pool, they started to
+            relax, until several of them noticed that someone was waiting for
+            them on the ridge of the crater that encircled the pool.  As they
+            approached, they found a man wearing noble garb and a relaxed look
+            on his face, which was odd considering the rather distinctive
+            makeup of their group.
+            </p>
+            <p>
+            <em>“Hello my friends,”</em> he said. <em>“I am the Flaneur.”</em>
+            </p>
+            <p>
+            He was a noble from Waterdeep who had been following them almost
+            since the beginning of their adventures. He noted that while they
+            had tricked a man into selling his soul, they had also saved the
+            unlives of a group of undead.
+            </p>
+            <p>
+            <em>“We are a complex alliance,”</em> said Verthandi.
+            </p>
+            <p>
+            <em>“You are indeed,”</em> replied the Flaneur.
+            </p>
+            <p>
+            <em>“Perhaps you should continue to follow us, to see what we
+                do,”</em> suggested Feuriel, which the Flaneur seemed to think
+            was a grand idea.
+            </p>
+            <p>
+            After taking their leave of the Flaneur, the party returned to the
+            ship and its unpleasant captain who’s name Verthandi couldn’t
+            remember, and they started heading back to Hell. This was not going
+            to go well, he thought. Krokiak would probably tell Enkosee about
+            the ostium, just from his intellectual banter that he always made,
+            or the massive amount of magical power emanating from her would
+            make it obvious. Or Bandito would attempt to steal the ostium from
+            inside her and reveal it, and Verthandi wasn’t completely convinced
+            that he couldn’t do it.
+            </p>
+            <p>
+            It was almost a relief when the ship was attacked.
+            </p>
+
         </div>
     </body>
 </html>
